--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">livingroom</a></h1>
+    <h1><a href="index.html">거실</a></h1>
     <h1>한적하고 넓은 대리석 발판이 있는 거실</h1>
 <img src="living.jpg">
 <h2>TV</h2>
