--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">my home</a></h1>
+    <h1><a href="index.html">내집</a></h1>
 <ol>
 <li><a href="2.html">거실</a></li>
 <li><a href="3.html">주방</a></li>
