--- a/3.html
+++ b/3.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">kitchen</a></h1>
+    <h1><a href="index.html">부엌</a></h1>
 <h1>조리 할 수 있는 조리대가 있고 식사를 할 수 있는 식탁이 있는 부엌</h1>
 
 <h2>식탁</h2>
