--- a/4.html
+++ b/4.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">my room</a></h1>
+    <h1><a href="index.html">내방</a></h1>
 <h2>컴퓨터</h2>
 <img src="컴퓨터.jpg">
 <h2>노트북</h2>
