--- a/5.html
+++ b/5.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">brother room</a></h1>
+    <h1><a href="index.html">동생방</a></h1>
 <h2>컴퓨터</h2>
 <img src="컴퓨터2.jpg">
 <h2>책상</h2>
