--- a/6.html
+++ b/6.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">parents room</a></h1>
+    <h1><a href="index.html">안방</a></h1>
 <h2>침대</h2>
 <img src="침대.jpg">
 <h2>책상</h2>
