--- a/7.html
+++ b/7.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1><a href="index.html">bath room</a></h1>
+    <h1><a href="index.html">화장실</a></h1>
 <h2>변기</h2>
 <img src="변기.jpg">
 <h2>세면대</h2>
